--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
+Jinja2==3.1.2
+MarkupSafe==2.1.2
 mysql-connector-python==8.0.32
 numpy==1.24.2
 pandas==1.5.3
-Pillow==9.5.0
+pdfkit==1.0.0
 protobuf==3.20.3
 PyQt5==5.15.9
 PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.1
+PyQt5-sip==12.12.1
 python-dateutil==2.8.2
-pytz==2022.7.1
-reportlab==3.6.12
+pytz==2023.3
 six==1.16.0
+workdays==1.4
